k8s/nodejs-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      type: nodejs-pod
  template:
    metadata:
      name: nodejs-pod
      labels:
        type: nodejs-pod
    spec:
      containers:
      - image: bishoyrefaatgaber/fortstak-task:v8
        name: nodejs-cont
        ports:
        - containerPort: 4000
          name: nodejs-port
          protocol: TCP
