k8s/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-svc
spec:
  selector:
    type: nodejs-pod
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
