k8s/nodejs-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodjs-ing
spec:
  ingressClassName: nginx
  rules:
  - host: www.fortstak-task.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-svc
            port:
              number: 4000
